--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -11,14 +11,14 @@ const getCertifications = Array.isArray(certificationsData) ? certificationsData
 ---
 
 <div class="flex justify-center mb-5">
-  <div class="bg-secondary rounded-lg shadow-md p-4 flex items-center">
+  <div class="bg-sky-50 rounded-lg shadow-md p-4 flex items-center">
     <div class="flex items-center mr-4">
       <div class="w-3 h-3 bg-yellow-300 rounded-full mr-2"></div>
-      <span class="text-primary font-semibold">Grado</span>
+      <span class="text-sky-400 font-semibold">Grado</span>
     </div>
     <div class="flex items-center">
       <div class="w-3 h-3 bg-green-300 rounded-full mr-2"></div>
-      <span class="text-primary font-semibold">Certificación</span>
+      <span class="text-sky-400 font-semibold">Certificación</span>
     </div>
   </div>
 </div>
