--- a/src/components/EducationItem.astro
+++ b/src/components/EducationItem.astro
@@ -15,7 +15,7 @@ const dotColor = type === 'grado' ? 'bg-yellow-300' : 'bg-green-300';
 <li class="mb-10 ml-4">
   <div class={`absolute w-3 h-3 ${dotColor} rounded-full mt-1.5 -left-1.5 border border-white`}></div>
   <h3 class="text-lg font-semibold text-gray-900">{institution}</h3>
-  <p class="text-primary">{title}</p>
+  <p class="text-sky-400">{title}</p>
   <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{date}</time>
   {link && (
     <LinkButton href={link}>
