--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import YoutubeIcon from './icons/YouTube.astro';
 import MailIcon from './icons/Mail.astro';
 ---
 
-<footer class="text-tertiary pb-16">
+<footer class="text-sky-950 pb-16">
     <div class="footer-content text-center">
       <div class="logo mb-4">
         <img src="/logo.svg" width="128" height="128" alt="jimcostdev logo" class="mx-auto opacity-85">
