--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -12,7 +12,7 @@ import DocumentIcon from './icons/Doc.astro';
         </div>
 
         <h1 class="text-2xl md:text-4xl font-bold px-8 text-center">
-          HOLA, SOY <span class="text-primary">RONALDO JIMÉNEZ</span>
+          HOLA, SOY <span class="text-sky-400">RONALDO JIMÉNEZ</span>
         </h1>
         
         <div class="flex flex-col items-center justify-between mt-1 text-center">
