--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -38,7 +38,7 @@ const getProjects = Array.isArray(projectData) ? projectData : [projectData];
           ))}
         </ul>
 
-      <div class="text-gray-700 dark:text-gray-400">{description}</div>
+      <div class="text-gray-500">{description}</div>
       <footer class="flex items-end justify-start gap-x-4">
           {link && (
             <LinkButton href={link}>
