--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -6,7 +6,7 @@
     target="_blank"
     rel="noopener noreferrer"
     class={`text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1 md:py-2
-    text-tertiary bg-transparent border rounded-full shadow-md 
+    text-sky-950 bg-transparent border rounded-full shadow-md 
     hover:shadow-xl ease-in-out duration-500 cursor-pointer mb-2 
     ${bgColor} ${borderColor} `}
   >
