--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,11 +7,11 @@ const description = "Lo sentimos, no podemos encontrar la página que estás bus
 const suggestion = "Verifica la URL o regresa a la página principal.";
 ---
 <Layout title="404 - JimcostDev">
-    <section class=" inset-0 -z-10 h-full w-full bg-secondary bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
+    <section class=" inset-0 -z-10 h-full w-full bg-sky-50 bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
         <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
             <div class="mx-auto max-w-screen-sm text-center">
-                <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-tertiary">404</h1>
-                <p class="mb-4 text-3xl tracking-tight font-bold text-tertiary/70 md:text-4x">{title}</p>
+                <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-sky-950">404</h1>
+                <p class="mb-4 text-3xl tracking-tight font-bold text-sky-950/70 md:text-4x">{title}</p>
                 <p class="mb-4 text-lg font-light text-gray-500">{description}</p>
                 <LinkButton href="/" target="">
                     {suggestion}
