--- a/src/components/ButtonNav.astro
+++ b/src/components/ButtonNav.astro
@@ -1,5 +1,5 @@
 <a class="flex items-center text-md gap-x-2 lg:text-lg transition-transform 
-    hover:scale-110 hover:text-primary"
+    hover:scale-110 hover:text-sky-400"
     {...Astro.props}>
     <slot/>
   </a>
