--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Title from "../components/TitleSection.astro"
 
 ---
 
-<Layout title="JimcostDev by Ronaldo Jiménez | Software Engineer">
+<Layout title="Ronaldo Jiménez">
 	<SectionContainer id="principal">
 		<Principal/>
 	</SectionContainer>
