--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -3,7 +3,9 @@
   target="_blank"
   rel="noopener noreferrer"
   class="text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1
-text-sky-600 bg-white/15 border border-sky-600 rounded-full shadow-md
-  hover:shadow-xl hover:hover:bg-sky-300/10 hover:text-gray-800 ease-in-out duration-500 cursor-pointer my-2">
+    text-sky-600 bg-white/15 border border-sky-600 rounded-full shadow-md
+    hover:shadow-xl hover:bg-sky-300/10 hover:text-gray-800 transition-all duration-500
+    cursor-pointer my-1 focus:outline-none focus:ring-2 focus:ring-sky-400 focus:ring-offset-2"
+>
   <slot />
 </a>
