--- a/src/components/PillSkill.astro
+++ b/src/components/PillSkill.astro
@@ -2,7 +2,7 @@
     <div class="bg-sky-50 hover:bg-sky-300/10 rounded-full p-4 flex items-center justify-center shadow-md hover:shadow-lg">
         <slot name="icon" />
     </div>
-    <p class="text-center font-extralight text-sm mt-2">
+    <p class="text-center font-light text-sm mt-2">
         <slot name="text" />
     </p>
 </div>
