--- a/src/components/ButtonNav.astro
+++ b/src/components/ButtonNav.astro
@@ -1,5 +1,6 @@
-<a class="flex items-center text-md gap-x-2 lg:text-lg transition-transform 
-    hover:scale-110 hover:text-sky-400"
-    {...Astro.props}>
-    <slot/>
-  </a>
+<a
+  class="flex items-center text-md gap-x-2 lg:text-lg px-3 py-2 rounded-md transition-transform duration-300 ease-in-out hover:scale-110 hover:bg-sky-50 hover:text-sky-400"
+  {...Astro.props}
+>
+  <slot />
+</a>
