--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,33 +8,33 @@ import ButtonNav from './ButtonNav.astro';
 ---
 
 <header class="w-full relative pb-2">
-     <!-- Barra de navegación fija en la parte inferior para móvil, en la parte superior para escritorio -->
-     <nav id="navegacion" class="fixed bottom-0 left-0 w-full shadow-sm bg-sky-50 text-sky-950 py-3 z-50  md:top-0 md:bottom-auto ">
-        <div class="container mx-auto max-w-4xl md:w-3/4 flex justify-between items-center px-8 md:px-0 md:space-x-4">
-          <ButtonNav href="/#principal">
-            <HomeIcon class="size-5"/> 
-            <span class="hidden md:inline">Inicio</span>
-          </ButtonNav>
+  <!-- Barra de navegación fija en la parte inferior para móvil, en la parte superior para escritorio -->
+  <nav id="navegacion" class="fixed bottom-0 left-0 w-full shadow-sm bg-sky-50 text-sky-950 py-3 z-50 md:top-0 md:bottom-auto">
+    <div class="container mx-auto max-w-4xl md:w-3/4 flex justify-between items-center px-8 md:px-0 md:space-x-4">
+      <ButtonNav href="/#principal">
+        <HomeIcon class="size-6 md:size-5" />
+        <span class="hidden md:inline">Inicio</span>
+      </ButtonNav>
 
-          <ButtonNav href="/#experiencia">
-            <ExperienceIcon class="size-5"/> 
-            <span class="hidden md:inline">Experiencia</span>
-          </ButtonNav>
+      <ButtonNav href="/#experiencia">
+        <ExperienceIcon class="size-6 md:size-5" />
+        <span class="hidden md:inline">Experiencia</span>
+      </ButtonNav>
 
-          <ButtonNav href="/#proyectos">
-            <ProjectIcon class="size-5"/> 
-            <span class="hidden md:inline">Proyectos</span>
-          </ButtonNav>
+      <ButtonNav href="/#proyectos">
+        <ProjectIcon class="size-6 md:size-5" />
+        <span class="hidden md:inline">Proyectos</span>
+      </ButtonNav>
 
-          <ButtonNav href="/#sobre-mi">
-            <AboutMeIcon class="size-5"/> 
-            <span class="hidden md:inline">Sobre mí</span>
-          </ButtonNav>
+      <ButtonNav href="/#sobre-mi">
+        <AboutMeIcon class="size-6 md:size-5" />
+        <span class="hidden md:inline">Sobre mí</span>
+      </ButtonNav>
 
-          <ButtonNav href="/#estudios">
-            <EducationIcon class="size-5"/> 
-            <span class="hidden md:inline">Estudios</span>
-          </ButtonNav>
-        </div>
-      </nav>
-</header> 
+      <ButtonNav href="/#estudios">
+        <EducationIcon class="size-6 md:size-5" />
+        <span class="hidden md:inline">Estudios</span>
+      </ButtonNav>
+    </div>
+  </nav>
+</header>
