--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -1,14 +1,15 @@
 ---
-    const { bgColor, borderColor, ...rest } = Astro.props;
+const { bgColor, borderColor, ...rest } = Astro.props;
 ---
-  <a
-    {...rest}
-    target="_blank"
-    rel="noopener noreferrer"
-    class={`text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1 md:py-2
-    text-sky-950 bg-transparent border rounded-full shadow-md 
-    hover:shadow-xl ease-in-out duration-500 cursor-pointer mb-2 
-    ${bgColor} ${borderColor} `}
-  >
-    <slot />
-  </a>
+<a
+  {...rest}
+  target="_blank"
+  rel="noopener noreferrer"
+  class={`text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1 md:py-2
+    text-sky-950 bg-transparent border rounded-full shadow-md
+    hover:shadow-xl hover:scale-105 transition-transform duration-300 cursor-pointer mb-2 
+    focus:outline-none focus:ring-2 focus:ring-sky-400 focus:ring-offset-2
+    ${bgColor} ${borderColor}`}
+>
+  <slot />
+</a>
