--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,3 +1,5 @@
-<h2 class="text-sky-400 text-xl md:text-2xl font-semibold text-center py-2 mb-2 uppercase">
-    <slot/>
+<h2 class="text-sky-400 text-xl md:text-2xl font-semibold text-center py-2 mb-4 uppercase tracking-wide relative">
+    <slot />
+    <span class="block w-16 h-1 bg-sky-400 mx-auto mt-1 rounded"></span>
 </h2>
+  
