--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -22,28 +22,33 @@ import DocumentIcon from './icons/Doc.astro';
   
   <div class="flex flex-col items-center mt-4">
     <h3 class="text-lg md:text-2xl font-semibold mb-4">SOFTWARE ENGINEER</h3>
+    <!-- Divider -->
+    <div class="border-t border-gray-300/50 w-full md:w-3/4 my-4"></div>
+
     <!-- Redes sociales -->
-    <div class="flex flex-wrap justify-center gap-4">
+    <div class="flex flex-wrap justify-center gap-2 md:gap-4">
       <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez" bgColor="hover:bg-blue-300/10" borderColor="border-blue-300">
-        <LinkedInIcon class="size-5 md:size-6"/>
-        LinkedIn
+        <LinkedInIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/>
       </SocialButton>
+
       <SocialButton href="https://github.com/JimcostDev" bgColor="hover:bg-gray-400/10" borderColor="border-gray-400">
-        <GitHubIcon class="size-5 md:size-6"/>
-        GitHub
+        <GitHubIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/> 
       </SocialButton>
+
       <SocialButton href="https://www.youtube.com/@jimcostdev?sub_confirmation=1" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
-        <YoutubeIcon class="size-5 md:size-6"/>
-        YouTube
+        <YoutubeIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/> 
       </SocialButton>
+
       <SocialButton href="mailto:jimcostdev@gmail.com" bgColor="hover:bg-yellow-300/10" borderColor="border-yellow-400">
-        <MailIcon class="size-5 md:size-6"/>
-        Contáctame
+        <MailIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/>
       </SocialButton>
-      <SocialButton href="https://cv.jimcostdev.com/" bgColor="hover:bg-green-300/10" borderColor="border-green-300">
-        <DocumentIcon class="size-5 md:size-6"/>
-        Descargar CV
+
+      <SocialButton href="https://cv.jimcostdev.com/" bgColor="hover:bg-green-300/10" borderColor="border-green-400">
+        <DocumentIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/>
       </SocialButton>
     </div>
+
+    <!-- Divider -->
+    <div class="border-t border-gray-300/50 w-full md:w-3/4 my-4"></div>
   </div>
 </div>
