animando titulos y mejora btn links

--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,5 +1,4 @@
-<h2 class="text-sky-400 text-xl md:text-2xl font-semibold text-center py-2 mb-4 uppercase tracking-wide relative">
+<h2 class="text-sky-400 text-xl md:text-2xl font-semibold text-center py-2 mb-4 uppercase tracking-wide relative opacity-0 animate-fade-in-up">
     <slot />
     <span class="block w-16 h-1 bg-sky-400 mx-auto mt-1 rounded"></span>
 </h2>
-  
