--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import MailIcon from './icons/Mail.astro';
 ---
 
 <footer class="bg-sky-50 text-sky-950 py-8">
-  <div class="max-w-3xl mx-auto flex flex-col items-center text-center mb-10">
+  <div class="max-w-3xl mx-auto flex flex-col items-center text-center mb-12 md:mb-4">
     
     <!-- Logo -->
     <img src="/logo.svg" width="96" height="96" alt="jimcostdev logo" class="mb-4 opacity-90 transition-transform hover:scale-105 duration-300">
