--- a/src/components/ButtonNav.astro
+++ b/src/components/ButtonNav.astro
@@ -1,5 +1,8 @@
 <a
-  class="flex items-center text-md gap-x-2 lg:text-lg px-3 py-2 rounded-md transition-transform duration-300 ease-in-out hover:scale-110 hover:bg-sky-50 hover:text-sky-400"
+  class="flex items-center text-md gap-x-2 lg:text-lg px-3 py-2 rounded-md transition-all duration-300 ease-in-out 
+         hover:scale-110 hover:bg-gradient-to-r hover:from-sky-400 hover:to-sky-600
+         bg-clip-text  bg-gradient-to-r from-transparent to-transparent
+         hover:text-transparent hover:bg-clip-text"
   {...Astro.props}
 >
   <slot />
