--- a/src/components/PillSkill.astro
+++ b/src/components/PillSkill.astro
@@ -1,8 +1,28 @@
-<div class="w-1/2 md:w-1/3 lg:w-1/3 p-2 flex flex-col items-center hover:scale-110 duration-300">
-    <div class="bg-sky-50 hover:bg-sky-300/10 rounded-full p-4 flex items-center justify-center shadow-md hover:shadow-lg">
-        <slot name="icon" />
-    </div>
-    <p class="text-center font-light text-sm mt-2">
-        <slot name="text" />
-    </p>
+---
+
+---
+<div
+  class="group w-1/2 md:w-1/3 lg:w-1/3 p-2 flex flex-col items-center hover:scale-110 duration-300"
+>
+  <!-- circulito con degradado de fondo al hover -->
+  <div
+    class="bg-sky-50 hover:bg-sky-300/10 rounded-full p-4 flex items-center justify-center shadow-md 
+           transition-colors duration-300 ease-in-out
+           group-hover:shadow-lg"
+  >
+    <slot name="icon" />
+  </div>
+
+  <!-- texto con degradado en hover -->
+  <p class="text-center font-light text-sm mt-2">
+    <span
+      class="transition-colors duration-300 ease-in-out
+             group-hover:bg-gradient-to-r group-hover:from-sky-400 group-hover:to-sky-600
+             group-hover:bg-clip-text group-hover:text-transparent"
+    >
+      <slot name="text" />
+    </span>
+  </p>
 </div>
+
+
