ruta alias e iniciamos división de componentes por sección

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import HomeIcon from '../components/icons/Home.astro';
-import ExperienceIcon from '../components/icons/Briefcase.astro';
-import ProjectIcon from '../components/icons/Code.astro';
-import EducationIcon from '../components/icons/GraduationCap.astro';
-import AboutMeIcon from '../components/icons/User.astro';
+import HomeIcon from '@components/icons/Home.astro';
+import ExperienceIcon from '@components/icons/Briefcase.astro';
+import ProjectIcon from '@components/icons/Code.astro';
+import EducationIcon from '@components/icons/GraduationCap.astro';
+import AboutMeIcon from '@components/icons/User.astro';
 import ButtonNav from './ButtonNav.astro';
 ---
 
