--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import Principal from '../components/Principal.astro'
-import Skills from '../components/Skills.astro'
-import Experience from '../components/Experience.astro'
-import Projects from '../components/Projects.astro'
-import About from '../components/About.astro'
-import SectionContainer from '../components/SectionContainer.astro'
-import Education from '../components/Education.astro'
-import Title from "../components/TitleSection.astro"
+import Layout from '@layouts/Layout.astro'
+import Principal from '@components/Principal.astro'
+import Skills from '@components/Skills.astro'
+import Experience from '@components/Experience.astro'
+import Projects from '@components/Projects.astro'
+import About from '@components/about/About.astro'
+import SectionContainer from '@components/SectionContainer.astro'
+import Education from '@components/Education.astro'
+import Title from "@components/TitleSection.astro"
 
 ---
 
