--- a/src/components/about/About.astro
+++ b/src/components/about/About.astro
@@ -1,5 +1,5 @@
 ---
-import { cargarDatos } from "../api/loadData.js";
+import { cargarDatos } from "@api/loadData.js";
 import CardAbout from "./CardAbout.astro";
 
 // info de perfil
